--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">spotify-streamer</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="no_results">Artist not found.</string>
     <string name="action_settings">Settings</string>
     <string name="list_item">List Item</string>
 </resources>
