--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="no_results">Artist not found.</string>
     <string name="action_settings">Settings</string>
     <string name="list_item">List Item</string>
+    <string name="title_activity_tracks">TracksActivity</string>
+    <string name="hello_world">Hello world!</string>
 </resources>
